--- a/web/www/index.html
+++ b/web/www/index.html
@@ -4,7 +4,7 @@
     <title>sjdhome</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="static/css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <nav>
@@ -50,6 +50,6 @@
     <footer>
       <div class="footer">sjdhome © 2023</div>
     </footer>
-    <script type="module" async src="static/js/index.js"></script>
+    <script type="module" async src="js/index.js"></script>
   </body>
 </html>
